same issue with the weather text data. changing color to be more legible

--- a/weather-map.css
+++ b/weather-map.css
@@ -19,7 +19,7 @@ body {
 
 #location {
     background-color: rgba(245, 245, 245, 0.3);
-    color: grey;
+    color: whitesmoke;
     padding:auto;
     font-style: oblique;
 
